0.6 (2012-02-02)
----
- Unit tests now cover over 95% of the code.
- Bugfix: when deleting a cookie, the time set in the past is now far in the past to avoid
  mishaps with local datetime settings.
- The 'httpOnly' option is now enabled by default when using Cookie::set


0.5 (2011-09-07)
----
- Filenames are now starting with an uppercase letter just like the class
- Reworked the tests a bit


0.4 (2011-08-12)
----
- Added the version number to the Cookie class constants.
- Added some unit tests. They're not worth very much, but it's a start!


0.3 (2011-08-12)
----
- Fixed the autoloader so it works with the new directory structure.


0.2 (2011-08-09)
----
- Changed the directory structure.


0.1 (2011-07-30)
----
- Created the cookie component based on the old SpoonCookie.